<resources>
    <string name="app_name">Agenda Universitaria</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="actionbar_subtitle">Agenda Universitaria</string>

    <string name="hint_promedio">0</string>

    <string name="hint_title_subject_name">Asignatura</string>
    <string name="label_subject_id">ID:</string>
    <string name="hint_subject_id">ID Asignatura</string>
    <string name="hint_subject_letter">A</string>
    <string name="label_subject_name">Nombre:</string>
    <string name="hint_subject_name">Nombre asignatura</string>
    <string name="label_subject_description">Descripcion:</string>
    <string name="hint_subject_description">Descripcion asignatura</string>
    <string name="label_subject_teacher">Docente:</string>
    <string name="hint_subject_teacher">Nombre docente</string>
    <string name="label_subject_average">Promedio:</string>
    <string name="hint_subject_average">0</string>

    <string name="hint_activity_time">19:20</string>
    <string name="hint_activity_name">Nombre actividad</string>
    <string name="hint_activity_description">Descripcion actividad (Opcional)</string>
    <string name="hint_activity_date">Fecha entrega</string>
    <string name="hint_activity_duration">Duracion (minutos)</string>
    <string name="hint_activity_subject">Nombre asignatura</string>
    <string name="hint_activity_percent">0%</string>
    <string name="hint_activity_percent_label">Porcentaje</string>
    <string name="hint_activity_state">Pendiente</string>
    <string name="hint_activity_subject_label">Asignatura</string>
    <string name="hint_activity_importance">Importancia</string>
    <string name="hint_activity_type">Tipo</string>
    <string name="hint_activity_color">Color</string>

    <string name="confirm">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="edit_item_menu">Editar</string>
    <string name="delete_item_menu">Eliminar</string>
    <string name="selecciona_tu_carrera">Selecciona tu carrera:</string>
    <string name="agenda">Agenda</string>
    <string name="asignaturas">Asignaturas</string>
    <string name="agendamenu">AGENDA</string>
    <string name="agregarmenuxml">Agregar</string>
    <string name="seleccionar_carrera">Seleccionar Carrera</string>
    <string name="nueva_carrera">Nueva Carrera</string>
    <string name="agendaactionbar">Agenda</string>
    <string name="agregar_actividad_action_bar">Agregar Actividad</string>
    <string name="detalle_actividad_actionbar">Detalle Actividad</string>
    <string name="agregar_asignatura_actionbar">Agregar Asignatura</string>
    <string name="detalle_asignatura_actionbar">Detalle Asignatura</string>
    <string name="lista_de_asignaturas_actionbar">Lista de Asignaturas</string>

    <string name="error_message_carrera_main_activity">No hay un semestre seleccionado!</string>
    <string name="label_subject_next_activities">Proximas actividades</string>
    <string name="label_empty_subjects">No hay asignaturas</string>
    <string name="hint_activity_hour">Hora</string>
    <string name="label_activity_trabajo">Trabajo:</string>
    <string name="label_activity_tipo">Tipo:</string>
    <string name="label_activity_descripcion">Descripción (Opcional):</string>
    <string name="label_activity_fecha_de_entrega">Fecha de entrega:</string>
    <string name="label_activity_estado">Estado:</string>
    <string name="label_activity_duracion">Duración:</string>
    <string name="label_activity_nota">Nota:</string>
    <string name="agrega_una_carrera">Agrega una Carrera</string>
    <string name="fecha_inicio_semestre">Fecha inicio semestre</string>
    <string name="fecha_termino_semestre">Fecha termino semestre</string>

    <string name="guardar">Guardar</string>
    <string name="tu_carrera">Tu Carrera</string>
    <string name="a_o">Año:</string>
    <string name="semestres">Semestres:</string>
    <string name="trabajo">Trabajo:</string>
    <string name="tipo">Tipo:</string>
    <string name="descripci_n">Descripción:</string>
    <string name="asignatura">Asignatura:</string>
    <string name="fecha_de_entrega">Fecha de entrega:</string>
    <string name="importancia">Importancia:</string>
    <string name="porcentaje">Porcentaje:</string>
    <string name="estado">Estado:</string>
    <string name="duraci_n">Duración:</string>
    <string name="nota">Nota:</string>
    <string name="ingenieria_en_informatica">Ingenieria en Informatica</string>
    <string name="promedio_general">Promedio General</string>
    <string name="promedio_semestre">Promedio Semestre</string>
    <string name="nuevo_semestre">Nuevo Semestre</string>
    <string name="inicio_semestre">Inicio Semestre</string>
    <string name="fin_semestre">Fin Semestre</string>
    <string name="a_o_ingreso">Año Ingreso</string>
    <string name="nombre_carrera">Nombre Carrera</string>
    <string name="your_name">Tu nombre</string>
    <string name="hint_greeting_user">Hola usuario</string>
    <string name="label_activity_subject">Asignatura:</string>
    <string name="nota_indefinida">Nota indefinida</string>
</resources>
