<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.dates.ActivityDetalles">
  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="30dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.026">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        tools:ignore="MissingConstraints">

      <TextView
          android:id="@+id/trabText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/trabajo"
          android:textSize="20dp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/trabSet"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

      <TextView
          android:id="@+id/tipoText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tipo"
          android:textSize="20dp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/tipoSet"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        tools:ignore="MissingConstraints">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

        <TextView
            android:id="@+id/descText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />
      </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

      <TextView
          android:id="@+id/asigText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/asignatura"
          android:textSize="20dp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/asigSet"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

      <TextView
          android:id="@+id/fechaText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/fecha_de_entrega"
          android:textSize="20dp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/fechaSet"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

      <TextView
          android:id="@+id/imporText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/importancia"
          android:textSize="20dp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/imporSet"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

      <TextView
          android:id="@+id/porText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/porcentaje"
          android:textSize="20dp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/porSet"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

      <TextView
          android:id="@+id/statText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/estado"
          android:textSize="20dp"
          android:textStyle="bold" />
      <TextView
          android:id="@+id/statSet"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20dp"
          >

      </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

      <TextView
          android:id="@+id/duraText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/duraci_n"
          android:textSize="20dp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/duraSet"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

      <TextView
          android:id="@+id/notaText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/nota"
          android:textSize="20dp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/notaSet"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp" />
    </LinearLayout>


  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>