<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/hint_activity_time"
            android:textAlignment="center"
            android:textColor="#000000">

        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/txtFecha"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTrabajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/hint_activity_name"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/txtAsignatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/hint_activity_subject"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="normal">

            </TextView>

            <TextView
                android:id="@+id/txtPorcentaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/hint_activity_percent"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="normal">

            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:text="@string/hint_activity_state"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
